<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/number_0"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/number_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_1" />

        <TextView
            android:id="@+id/number_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_2" />

        <TextView
            android:id="@+id/number_3"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_3" />

        <TextView
            android:id="@+id/number_4"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_4" />

        <TextView
            android:id="@+id/number_5"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_5" />

        <TextView
            android:id="@+id/number_6"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_6" />

        <TextView
            android:id="@+id/number_7"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_7" />

        <TextView
            android:id="@+id/number_8"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_8" />

        <TextView
            android:id="@+id/number_9"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/_9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/sign_plus"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/sign_plus" />

        <TextView
            android:id="@+id/sign_minus"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/sign_minus" />

        <TextView
            android:id="@+id/sign_multiply"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/sign_multiply" />

        <TextView
            android:id="@+id/sign_divide"
            android:layout_width="0dp"
            android:layout_height="@dimen/keyboard_button_size"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bubble_background"
            android:gravity="center"
            android:text="@string/sign_divide" />
    </LinearLayout>

</LinearLayout>